# pulsartrack

./: .env.example  .gitignore  ANOMALY_DETECTOR_FIX.md  CROSS_CONTRACT_VALIDATION.md  Cargo.toml  DOCKER_SETUP.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.test.yml  package-lock.json  package.json  vitest.config.ts
backend/src/: app.ts  index.ts  test-setup.ts  test-utils.ts
contracts/ad-registry/: Cargo.toml
contracts/analytics-aggregator/: Cargo.toml
contracts/anomaly-detector/: Cargo.toml
contracts/auction-engine/: Cargo.toml
contracts/audience-segments/: Cargo.toml
contracts/budget-optimizer/: Cargo.toml
contracts/campaign-analytics/: Cargo.toml
contracts/campaign-lifecycle/: Cargo.toml
contracts/campaign-orchestrator/: Cargo.toml
contracts/common-admin/: Cargo.toml
contracts/creative-marketplace/: Cargo.toml
contracts/dispute-resolution/: Cargo.toml
contracts/escrow-vault/: Cargo.toml
contracts/fraud-prevention/: Cargo.toml
contracts/governance-core/: Cargo.toml
contracts/governance-dao/: Cargo.toml
contracts/governance-token/: Cargo.toml
contracts/identity-registry/: Cargo.toml
contracts/kyc-registry/: Cargo.toml
contracts/liquidity-pool/: Cargo.toml
contracts/milestone-tracker/: Cargo.toml
contracts/multisig-treasury/: Cargo.toml
contracts/oracle-integration/: Cargo.toml
contracts/payment-processor/: Cargo.toml
contracts/payout-automation/: Cargo.toml
contracts/revenue-settlement/: Cargo.toml
contracts/revenue-settlement/src/: lib.rs  test.rs
contracts/revenue-settlement/test_snapshots/test/: test_claim_publisher_balance.1.json  test_distribute_platform_revenue.1.json  test_get_publisher_balance_unknown.1.json  test_get_settlement_nonexistent.1.json  test_initialize_twice.1.json  test_record_revenue_accumulates.1.json  test_record_revenue_fee_split.1.json  test_record_revenue_unauthorized.1.json
deployments/: README.md  deployed-testnet-example.json  deployed-testnet.json
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
(+582 files in other folders)
