[package]
name = "pulsar-revenue-settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
pulsar-common-admin = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
